--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.0",
     "jquery": "^3.1.0",
     "json-editor": "^0.7.28",
+    "marked": "^0.3.6",
     "monk": "^3.1.2",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6"
