--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "marked": "^0.3.6",
     "monk": "^3.1.2",
     "morgan": "^1.7.0",
-    "pug": "^2.0.0-beta6"
+    "pug": "^2.0.0-beta6",
+    "request": "^2.75.0"
   }
 }
