--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "async": "^2.0.1",
     "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
+    "bootstrap-select": "^1.11.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "jquery": "^3.1.0",
