--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "lessiki",
-  "description": "Generic platform for lexica of Maltese",
+  "description": "A platform for lexica of Maltese",
   "main": "app.js",
   "authors": [
     "John J. Camilleri"
